--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "laravel/ui": "^4.0"
+        "laravel/ui": "^4.0",
+        "laraveldaily/laravel-charts": "^0.1.29"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
